# dbs/boltdb/boltdb_app_server/get_instances.go
@@ -4,10 +4,7 @@ import (
 	"bytes"
 	"encoding/json"
 	"log"
-	"sync"
 	"time"
-
-	"golang.org/x/sync/syncmap"
 
 	"github.com/boltdb/bolt"
 	"github.com/hippoai/goutil"
@@ -21,9 +18,9 @@ type KV struct {
 }
 
 // GetInstances returns all the instances scheduled between start and end time
-func (database *Database) GetInstances(start, end time.Time) ([]*structures.Instance, error) {
+func (database *Database) get(start, end time.Time, bucketName string) ([]*structures.Instance, error) {
 
-	all := syncmap.Map{}
+	this_bucket_kv := []*KV{}
 
 	// Execute the transaction and store the instance ID outside the scope if successful
 	err := database.DB.View(func(tx *bolt.Tx) error {
@@ -31,31 +28,15 @@ func (database *Database) GetInstances(start, end time.Time) ([]*structures.Inst
 		min := []byte(laterutil.TimeToString(start))
 		max := []byte(laterutil.TimeToString(end))
 
-		// Iterate through all buckets concurrently to gather the instances
-		var wg sync.WaitGroup
-		for _, taskName := range database.Tasks {
-			wg.Add(1)
+		bucket := tx.Bucket([]byte(bucketName))
+		cursor := bucket.Cursor()
 
-			go func(taskName string) {
-
-				defer wg.Done()
-				cursor := tx.Bucket(bucket(taskName)).Cursor()
-				this_bucket_kv := []*KV{}
-
-				for k, v := cursor.Seek(min); k != nil && bytes.Compare(k, max) <= 0; k, v = cursor.Next() {
-					this_bucket_kv = append(this_bucket_kv, &KV{
-						K: k,
-						V: v,
-					})
-				}
-
-				all.Store(taskName, this_bucket_kv)
-
-			}(taskName)
-
+		for k, v := cursor.Seek(min); k != nil && bytes.Compare(k, max) <= 0; k, v = cursor.Next() {
+			this_bucket_kv = append(this_bucket_kv, &KV{
+				K: k,
+				V: v,
+			})
 		}
-
-		wg.Wait()
 
 		return nil
 	})
@@ -67,29 +48,23 @@ func (database *Database) GetInstances(start, end time.Time) ([]*structures.Inst
 	instances := []*structures.Instance{}
 
 	errorsForKeys := []string{}
-	all.Range(func(k interface{}, vItf interface{}) bool {
-		kvs := vItf.([]*KV)
+	for _, kv := range this_bucket_kv {
 
-		for _, kv := range kvs {
+		// Get the key in Boltdb
+		key := string(kv.K)
 
-			// Get the key in Boltdb
-			key := string(kv.K)
-
-			// Get the instance stored in the database
-			// And if we can't unmarshal it, return the error
-			var instance structures.Instance
-			err := json.Unmarshal(kv.V, &instance)
-			if err != nil {
-				errorsForKeys = append(errorsForKeys, key)
-				return true
-			}
-
-			instances = append(instances, &instance)
-
+		// Get the instance stored in the database
+		// And if we can't unmarshal it, return the error
+		var instance structures.Instance
+		err := json.Unmarshal(kv.V, &instance)
+		if err != nil {
+			errorsForKeys = append(errorsForKeys, key)
+			break
 		}
 
-		return true
-	})
+		instances = append(instances, &instance)
+
+	}
 
 	// Print the errors
 	if len(errorsForKeys) > 0 {
@@ -100,4 +75,24 @@ func (database *Database) GetInstances(start, end time.Time) ([]*structures.Inst
 
 	return instances, nil
 
+}
+
+// GetInstances returns the pending commands
+func (database *Database) GetInstances(start, end time.Time) ([]*structures.Instance, error) {
+	return database.get(start, end, BUCKET_PENDING)
+}
+
+// GetAborted
+func (database *Database) GetAborted(start, end time.Time) ([]*structures.Instance, error) {
+	return database.get(start, end, BUCKET_ABORTED)
+}
+
+// GetSuccessful
+func (database *Database) GetSuccessful(start, end time.Time) ([]*structures.Instance, error) {
+	return database.get(start, end, BUCKET_SUCCESSFUL)
+}
+
+// GetFailed
+func (database *Database) GetFailed(start, end time.Time) ([]*structures.Instance, error) {
+	return database.get(start, end, BUCKET_FAILED)
 }
