# dbs/boltdb/boltdb_app_server/kv.go
@@ -8,11 +8,12 @@ import (
 )
 
 // MakeID creates a unique ID, sortable by execution time
-func MakeID(executionTime time.Time) string {
+func MakeID(executionTime time.Time, taskName string) string {
 	uuid := goutil.UuidV4()
 
-	return fmt.Sprintf("%s.%s",
-		executionTime.Format(time.RFC3339),
+	return fmt.Sprintf("%s.%s.%s",
+		executionTime.UTC().Format(time.RFC3339),
+		taskName,
 		uuid,
 	)
 }
